--- a/callforpapers.html
+++ b/callforpapers.html
@@ -197,15 +197,15 @@ Topics of interests should fall under one or more of the conference tracks:<br/>
    <b> Note</b> : For more topics of Conference Tracks consider <a href="tracks.html"> Tracks tab</a> 
    <hr>
 </div>
-Author Registration Form <a href="Registration_Form_ICITDA-2018.pdf" target="_blank">click here</a><br/> 
+<!-- Author Registration Form <a href="Registration_Form_ICITDA-2018.pdf" target="_blank">click here</a><br/>  -->
 
     </div>
   </div>
-<br>
+<!-- <br>
 <div class="container">
 <p style="text-align: justify;">Prospective authors are invited to submit papers of four (4) to eight (8) A4 pages (including tables, figures and references) in standard format (it is absolutely necessary to respect the Styleguide for Papers). A blind peer-review process will be used to evaluate all submitted papers. Each full registration for the conference will cover a maximum of one paper; each student registration will cover a single paper only. Extra paper, 2nd paper and onwards, must be registered separately. The format instructions in the template must be followed, it is notably important to use the right paper format: A4 to have the right margins not to use page numbering (page footer must be empty).
   </p>
-</div>
+</div> -->
 
     <!-- footer -->
     <footer id="footer" class="midnight-blue">
