--- a/guidelines.html
+++ b/guidelines.html
@@ -108,9 +108,9 @@ All submissions are to be done electronically through easychair link.<br/></p>
                     <br/>
                     <!--For paper template & formatting instructions &nbsp <a href="http://www.easychair.org/publications/for_authors" target="_blank">click here</a>
                     <br>-->
-                    Word Template Download <a href="word.zip"> Click Here!</a>
+                    <!-- Word Template Download <a href="word.zip"> Click Here!</a>
                     <br/>
-                    LATEX Template Download<a href="latex.zip">Click Here!</a>
+                    LATEX Template Download<a href="latex.zip">Click Here!</a> -->
                                
                     </p>
 
