--- a/submission.html
+++ b/submission.html
@@ -95,7 +95,7 @@
 
     <h1 style="color: #013c65">Paper Submission</h1>
     <p>
-             Authors are requested to submit their Research Paper using Times New Roman with Font size 12 in MS Word in IEEE format at icitda@jecrc.ac.in  Paper should have an Abstract of 200 words, 4-6 Key Words, Figures, Diagrams, Tables, Graphs and Reference in prescribed Format and Full Length of  Paper not more than 6 Pages. Authors have to follow the Dates as mentioned.
+             Authors are requested to submit their Research Paper at icitda@jecrc.ac.in or <a href="https://easychair.org/conferences/?conf=icitda2018" target="_blank">easychair</a>.  Paper should have an Abstract of 200 words, 4-6 Key Words, Figures, Diagrams, Tables, Graphs and Reference in prescribed Format and Full Length of  Paper not more than 6 Pages. Authors have to follow the Dates as mentioned.
 Papers Selected in ICITDA 2018 will be considered for Publication in UGC approved Journals: Springer Nature [ISSN: 2511-2104 (Print Version); ISSN: 2511-2112 (Electronic Version), <a href="http://www.springer.com/computer/journal/41870">http://www.springer.com/computer/journal/41870</a>], IJETAE (International Journal of Emerging Technology and advanced Engineering [ISSN: 2250–2459], <a href="http://www.ijetae.com">http://www.ijetae.com</a>), IJCEA (International Journal of Computer Engineering and applications [ISSN: 2321-3469] <a href="http://www.ijcea.com">http://www.ijcea.com</a>) and IGI Global (International Journal of Ambient Computing and Intelligence (IJACI) <a href="https://www.igi-global.com/journal/international-journal-ambient-computing-intelligence/1110#indices">https://www.igi-global.com/journal/international-journal-ambient-computing-intelligence/1110#indices</a> , International Journal of Rough Sets and Data Analysis (IJRSDA)  <a href="https://www.igi-global.com/journal/international-journal-rough-sets-data/73546">https://www.igi-global.com/journal/international-journal-rough-sets-data/73546</a> ).
 
     </p>
@@ -109,9 +109,9 @@ Papers Selected in ICITDA 2018 will be considered for Publication in UGC approve
                     <p>
                     For paper template & formatting instructions &nbsp <a href="https://easychair.org/publications/for_authors" target="_blank">Click Here</a>
                     <br>
-    Copyright Form <a href="#" target="_blank">To be updated soon</a>
-                    <br>
-    Author Registration Form  <a href="Registration_Form_ICITDA-2018.pdf" target="_blank">click here</a>
+    Copyright Form <a href="Copyright_transfer_Form_ICITDA-2018.pdf" target="_blank">click here</a>
+                    <!-- <br>
+    Author Registration Form  <a href="Registration_Form_ICITDA-2018.pdf" target="_blank">click here</a> -->
                     </p>
                     
 </div>
