--- a/Committee.html
+++ b/Committee.html
@@ -388,32 +388,154 @@
 
 
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
-  <span>Organising Committee</span>    
+  <span>Certificate  Preparation /Distribution Committee
+</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-  <span>Mr.Vishal Sagtani, Chair OC</span>
-  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Ms.Kusum Yadav</span>
-  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Mr.Piyush Gautam</span>
-  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Ms.Shweta Saxena</span>
-  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Ms.Preeti Sharma</span>
-  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Ms.Shikha Srivastava</span>
-  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Ms.Pallavi Singh</span>
-  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Ms.Deepika Bansal</span>
-  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Mr. Brijesh Singh</span>
-  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Mr.Jayshankar</span>
-  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span>Ms.Neha Mudgal</span>
+                  Brijesh Sir
+              <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sir
+            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shikha Ma'am
+             <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Preeti Ma'am
+
+  
   </div> 
-      <!-------------------------Publication Chair -------------------------------------->     
+      <!-------------------------Publication Chair -------------------------------------->  
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+  <span>Registration Committee</span>    
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+    Piyush Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Kusum Ma'am
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Swati Ma'am
+
+  
+  </div> 
+      <!-------------------------Publication Chair --------------------------------------> 
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+  <span>Refreshment Committee</span>    
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+    Brijesh Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Furkhan Sir
+
+  
+  </div> 
+      <!-------------------------Publication Chair --------------------------------------> 
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+  <span>Venue Arrangement Committee</span>    
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+    Shikha Ma'am
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Vishal Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Furkhan Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Banwari Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Krishan Sir
+
+  
+  </div> 
+      <!-------------------------Publication Chair --------------------------------------> 
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+  <span>Technical Session Committee</span>    
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+    S.K. Singh Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Swati Ma'am
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Vishal Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shweta Ma'am
+
+  
+  </div> 
+      <!-------------------------Publication Chair --------------------------------------> 
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+  <span>Certificate  Preparation /Distribution Committee
+</span>    
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+    Brijesh Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shikha Ma'am
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Preeti Ma'am
+
+  
+  </div> 
+      <!-------------------------Publication Chair --------------------------------------> 
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+  <span>Anchoring Committee</span>    
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+    Manju Ma'am
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Deepika Ma'am
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Pallavi Ma'am
+
+  
+  </div> 
+      <!-------------------------Publication Chair --------------------------------------> 
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+  <span>Escorting  Session Chair/Guest</span>    
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+    S.K. Singh Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Preeti Ma'am
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Swati Ma'am
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Vishal Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Piyush Sir
+
+  
+  </div> 
+      <!-------------------------Publication Chair --------------------------------------> 
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+  <span>Media Coverage Committee</span>    
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+    Deepika Ma'am
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Brijesh Sir
+
+  
+  </div> 
+      <!-------------------------Publication Chair --------------------------------------> 
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+  <span>Sponsorship Committee</span>    
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+    Kusum Ma'am
+  
+  </div> 
+      <!-------------------------Publication Chair --------------------------------------> 
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+  <span>Accommodation /Transport Committee</span>    
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+    Jay Shankar Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Brijesh Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Deepika Ma'am
+
+  
+  </div> 
+      <!-------------------------Publication Chair --------------------------------------> 
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+  <span>Purchase Committee</span>    
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+    Piyush Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Brijesh Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shweta Ma'am
+
+  
+  </div> 
+      <!-------------------------Publication Chair --------------------------------------> 
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+  <span>Publication /Review Committee</span>    
+  </div>     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
+    S.K. Singh Sir
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shweta Ma'am
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shikha Ma'am
+
+  
+  </div> 
+      <!-------------------------Publication Chair -------------------------------------->    
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
   <span>Student Co-ordinators</span>    
   </div>     
