--- a/Committee.html
+++ b/Committee.html
@@ -207,7 +207,7 @@
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Velmurugan J , Assistant Professor, Department of Information Technology, Veltech Hightech Dr.Rangarajan Dr.Sakunthala Engineering College, Chennai, INDIA
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Vijaykumar S. Bidve, Assistant Professor, Information Technology Deptt., STES’s SKNCOE, Pune, India
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Vilender Kumar, Professor, Deptt. of Computer Science & Information Technology, IITM, New Delhi, INDIA.
-       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof.(Dr.) D . Asir Antony Gnana Singh, Assistant Professor,Department of Computer Science and Engineering, M.I.E.T Engineering College, Trichy, INDIA
+       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof.(Dr.) D . A Antony Gnana Singh, Assistant Professor,Department of Computer Science and Engineering, M.I.E.T Engineering College, Trichy, INDIA
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof.(Dr.) J.K.Gothwal, Professor (Computer Science & Engineering),Rajeev Gandhi Memorial College of Engineering & Technology - (Autonomous), Andhra Pradesh, INDIA
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof.(Dr.) Krishna Asawa, HoD- CSE, Jaypee Institute of Information Technology, Noida
       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Prof.Chandrashekhar Shankar Shinde, Assistant Prof., Computer Science & Engineering Department Dr. J. J. Magdum College of Engineering, Maharashtra, INDIA
@@ -392,10 +392,10 @@
 </span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-                  Brijesh Sir
-              <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sir
-            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shikha Ma'am
-             <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Preeti Ma'am
+                  Brijesh Kumar Singh 
+              <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sharma 
+            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shikha Shrivastav 
+             <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Preeti Sharma  
 
   
   </div> 
@@ -404,9 +404,9 @@
   <span>Registration Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Piyush Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Kusum Ma'am
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Swati Ma'am
+    Piyush 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Kusum Yadav 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Swati Vijay
 
   
   </div> 
@@ -415,9 +415,9 @@
   <span>Refreshment Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Brijesh Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Furkhan Sir
+    Brijesh Kumar Singh 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sharma 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Furkhan Khan
 
   
   </div> 
@@ -426,11 +426,11 @@
   <span>Venue Arrangement Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Shikha Ma'am
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Vishal Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Furkhan Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Banwari Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Krishan Sir
+    Shikha Shrivastav 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Vishal Kumar Singh
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Furkhan Khan
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Banwari Sharma
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Krishan Sharma
 
   
   </div> 
@@ -439,10 +439,10 @@
   <span>Technical Session Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    S.K. Singh Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Swati Ma'am
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Vishal Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shweta Ma'am
+    S.K. Singh 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Swati Vijay
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Vishal Kumar Sangtani
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shweta Saxena
 
   
   </div> 
@@ -452,10 +452,10 @@
 </span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Brijesh Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shikha Ma'am
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Preeti Ma'am
+    Brijesh Kumar Singh 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sharma 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shikha Shrivastav 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Preeti Sharma  
 
   
   </div> 
@@ -464,9 +464,9 @@
   <span>Anchoring Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Manju Ma'am
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Deepika Ma'am
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Pallavi Ma'am
+    Manju 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Deepika Bansal
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Pallavi Singh
 
   
   </div> 
@@ -475,11 +475,11 @@
   <span>Escorting  Session Chair/Guest</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    S.K. Singh Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Preeti Ma'am
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Swati Ma'am
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Vishal Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Piyush Sir
+    S.K. Singh 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Preeti Sharma  
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Swati Vijay
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Vishal Kumar Sangtani
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Piyush Gautam
 
   
   </div> 
@@ -488,8 +488,8 @@
   <span>Media Coverage Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Deepika Ma'am
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Brijesh Sir
+    Deepika Bansal
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Brijesh Kumar Singh 
 
   
   </div> 
@@ -498,7 +498,7 @@
   <span>Sponsorship Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Kusum Ma'am
+    Kusum Yadav 
   
   </div> 
       <!-------------------------Publication Chair --------------------------------------> 
@@ -506,9 +506,9 @@
   <span>Accommodation /Transport Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Jay Shankar Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Brijesh Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Deepika Ma'am
+    Jay Shankar Sharma 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Brijesh Kumar Singh 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Deepika Bansal
 
   
   </div> 
@@ -517,10 +517,10 @@
   <span>Purchase Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Piyush Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Brijesh Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shweta Ma'am
+    Piyush Gautam
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sharma 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Brijesh Kumar Singh 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shweta Saxena 
 
   
   </div> 
@@ -529,9 +529,9 @@
   <span>Publication /Review Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    S.K. Singh Sir
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shweta Ma'am
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shikha Ma'am
+    S.K. Singh 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shweta Saxena
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shikha Shrivastav 
 
   
   </div> 
