--- a/Committee.html
+++ b/Committee.html
@@ -404,7 +404,7 @@
   <span>Registration Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Piyush 
+    Piyush Gautam
 <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Kusum Yadav 
 <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Swati Vijay
 
