--- a/Committee.html
+++ b/Committee.html
@@ -383,19 +383,23 @@
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
   <span>Dr. Lokesh Bansal, JECRC</span>            
   <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">
-  <span> Dr. Sandeep Vyas,JECRC</span>
+  <span> Dr. Sandeep Vyas, JECRC</span>
 </div>
-
+<div align="center" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
+  <span >Organising Committee
+</span>    
+  </div>    
 
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
   <span>Certificate  Preparation /Distribution Committee
 </span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-                  Brijesh Kumar Singh 
-              <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sharma 
-            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shikha Shrivastav 
-             <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Preeti Sharma  
+                   Ms. Shikha Shrivastav
+              
+            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Mr. Jay Shankar Sharma
+            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Mr. Brijesh Kumar Singh
+             <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Preeti Sharma  
 
   
   </div> 
@@ -404,9 +408,9 @@
   <span>Registration Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Piyush Gautam
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Kusum Yadav 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Swati Vijay
+    Ms. Swati Vijay
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Kusum Yadav 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mr. Piyush Gautam
 
   
   </div> 
@@ -415,9 +419,10 @@
   <span>Refreshment Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Brijesh Kumar Singh 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sharma 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Furkhan Khan
+     Mr. Piyush Gautam
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mr. Jay Shankar Sharma 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mr. Brijesh Kumar Singh
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mr. Furkhan Khan
 
   
   </div> 
@@ -426,11 +431,11 @@
   <span>Venue Arrangement Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Shikha Shrivastav 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Vishal Kumar Singh
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Furkhan Khan
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Banwari Sharma
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Krishan Sharma
+    Mr. Vishal Kumar Sagtani
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Shikha Shrivastav 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mr. Furkhan Khan
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mr. Banwari Sharma
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mr. Krishan Sharma
 
   
   </div> 
@@ -439,10 +444,10 @@
   <span>Technical Session Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    S.K. Singh 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Swati Vijay
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Vishal Kumar Sangtani
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shweta Saxena
+    Dr. S.K. Singh 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Swati Vijay
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mr. Vishal Kumar Sagtani
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Shweta Saxena
 
   
   </div> 
@@ -452,10 +457,11 @@
 </span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Brijesh Kumar Singh 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sharma 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shikha Shrivastav 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Preeti Sharma  
+     Mr. Jay Shankar Sharma
+
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Shikha Shrivastav 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Mr. Brijesh Kumar Singh
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Preeti Sharma  
 
   
   </div> 
@@ -464,9 +470,9 @@
   <span>Anchoring Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Manju 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Deepika Bansal
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Pallavi Singh
+    Ms. Manju Vyas
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Deepika Bansal
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Pallavi Singh
 
   
   </div> 
@@ -475,11 +481,12 @@
   <span>Escorting  Session Chair/Guest</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    S.K. Singh 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Preeti Sharma  
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Swati Vijay
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Vishal Kumar Sangtani
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Piyush Gautam
+    Dr. S.K. Singh 
+ 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Swati Vijay
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mr. Vishal Kumar Sagtani
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mr. Piyush Gautam
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Preeti Sharma 
 
   
   </div> 
@@ -488,8 +495,8 @@
   <span>Media Coverage Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Deepika Bansal
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Brijesh Kumar Singh 
+    Mr. Brijesh Kumar Singh
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Ms. Deepika Bansal
 
   
   </div> 
@@ -498,7 +505,7 @@
   <span>Sponsorship Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Kusum Yadav 
+    Ms. Kusum Yadav 
   
   </div> 
       <!-------------------------Publication Chair --------------------------------------> 
@@ -506,9 +513,9 @@
   <span>Accommodation /Transport Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Jay Shankar Sharma 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Brijesh Kumar Singh 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Deepika Bansal
+    Mr. Jay Shankar Sharma 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mr. Brijesh Kumar Singh 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Deepika Bansal
 
   
   </div> 
@@ -517,10 +524,10 @@
   <span>Purchase Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    Piyush Gautam
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Jay Shankar Sharma 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Brijesh Kumar Singh 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shweta Saxena 
+    Mr. Jay Shankar Sharma
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Mr. Piyush Gautam
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mr. Brijesh Kumar Singh 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Shweta Saxena 
 
   
   </div> 
@@ -529,9 +536,9 @@
   <span>Publication /Review Committee</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
-    S.K. Singh 
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shweta Saxena
-<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Shikha Shrivastav 
+    Dr. S.K. Singh 
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Ms. Shikha Shrivastav
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Ms. Shweta Saxena
 
   
   </div> 
