--- a/index.html
+++ b/index.html
@@ -209,8 +209,56 @@ et dolore magna aliqua. Ut enim ad minim veniam
 
 </div>
 </div>
+ <br>
+        <div  style="width:100%;;min-height:300px;background: #EBEBEB;display: flex;margin-top: 10px">
+            <div class="container" style="padding: 30px 0; border: 5px solid #333333e6;border-radius: 20px">
+                    <div align="center">
+                    <span style="font-size: 1.5em">  <b> Criteria for Publication</b></span>
+
+
+                        <hr style="height: 2px;background: #0D449C;padding: 0;margin: 10px 0;width: 55%">
+                    </div> 
+                    <div style="margin-left: 4%;    margin-right: 4%;    text-align: justify;">
+                    The authors are requested to go through the following criteria for publication of their Research papers:
+<br><br>  
+      <ol> <li>Ranking of papers will be done out of 20 marks on the following basis:
+<ol type="a">
+       <li>Paper Acceptance out of 10 marks :
+<ul>
+         <li>strongly accepted:      (8-10)/10</li>
+
+        <li>accepted:                     (6-7)/10</li>
+
+<li>        weakly accepted:         (0-5)/10</li></ul></li>
+
+<li>       Physical Presentation out of 10 marks (as per the session chair(s) decision)
+<ul>
+<li>         strongly presented:                 (8-10) /10</li>
+
+<li>         normally presented:                 (6-7) /10</li>
+
+<li>         weakly presented:                   (4-5) /10</li>
+
+<li>         very weakly presented:          (0-3) /10</li></ul></li></ol>
+
+
+*Therefore, the final marking of the paper will be done on the basis of marks obtained out of 20.
+
+ For example, if a paper is weakly accepted (5 marks), but is strongly presented with satisfying all queries (e.g. 10 out of 10). The final marks will be 5+10 = 15, and hence can get a higher rank.</li>
+
+ 
 <br>
-        <div class="sponsors" style="width:100%;;min-height:300px;background: #EBEBEB;display: flex;">
+<li> The best papers evaluated on the basis of their acceptance and physical presentation of the papers will be considered for publication in Springer Nature- BJIT. For this the overall marking of the paper should be between 15-20 marks.</li>
+<br>
+<li>The next best papers in category on the basis of their evaluation , will be published in UGC approved journals: IJETAE (International Journal of Emerging Technology and advanced Engineering, IJCEA (International Journal of Computer Engineering and applications).</li>
+</ol></div>
+ 
+                  </div>
+                </div>
+
+<br>
+        <div class="sponsors" style="width:100%;;min-height:300px;background: #EBEBEB;display: flex;margin-top: -19px;
+">
             <div class="container" style="padding: 30px 0;font-family: 'Russo One', sans-serif;color:#0D449C;font-size: 1.5em; border: 5px solid #34a1c1d6;margin-top:20px;  border-radius: 2px">
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-lg-offset-4 col-md-offset-4 col-sm-offset-4 pad0 text-center">
                     <span style="">   In Association with</span>
@@ -304,7 +352,7 @@ et dolore magna aliqua. Ut enim ad minim veniam
                 </div>
             </div>
         <!-- </div> -->
-	
+       
 	
 	<footer id="footer" class="midnight-blue">
         <div class="container">
